changed docker build for dockerfile, git repo(not yet)
